--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
     <string name="menu_7">7</string>
     <string name="menu_8">8</string>
     <string name="menu_9">9</string>
+    <string name="menu_review">review</string>
     <string name="menu_reset">reset</string>
     <string name="menu_op">+</string>
     <string name="menu_next_tbl">next table</string>
@@ -20,4 +21,6 @@
     <string name="menu_show_num_picker">picker</string>
     <string name="title_activity_add_table">AddTableActivity</string>
     <string name="title_activity_number_select">NumberSelectActivity</string>
+    <string name="title_activity_history_wrong">incorrect list</string>
+    <string name="title_activity_history_display">incorrect list</string>
 </resources>
